--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Hello, World!</h1>
+<html>
+<body>
+
+<input type="text" id="addresses_full_address" />
+
+<script>
+  function initAutocomplete() {
+    var elem = document.getElementById('addresses_full_address');
+    var autocomplete = new google.maps.places.Autocomplete(
+      elem, { types: ['geocode']});
+    autocomplete.addListener('place_changed', function() {});
+  }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT6Y1uVoYPDbR0C5vLXXpgjJznNt8AZnQ&amp;libraries=places&amp;callback=initAutocomplete&amp;language=en-US"></script>
+</body>
+</html>
