--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@ layout: default
 <div class="container">
   <div id="post_list" class="post_list">
     {% for post in site.posts %}
-    <a class="post_row" href="{{ post.url | prepend: site.baseurl }}">
-      <div class="post_row__title">
-        {{ post.title }}
+    <a class="post_row clearfix" href="{{ post.url | prepend: site.baseurl }}">
+      <div class="pull-left">
+        <div class="post_row__title">
+          {{ post.title }}
+        </div>
+        <div class="post_row__description">
+          {{ post.description }}
+        </div>
       </div>
-      <div class="post_row__description">
-        {{ post.description }}
-      </div>
+      {% include summery_block.html include_github=true %}
     </a>
     {% endfor %}
   </div>
